--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.2",
     "astro": "^2.5.6"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.43.0",
+    "eslint-plugin-astro": "^0.27.1",
+    "postcss-html": "^1.5.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.10.0",
+    "stylelint-config-html": "^1.1.0"
   }
 }
